# AGUpdater

./: .gitignore  CLAUDE.md  CMakeLists.txt
.github/workflows/: build.yml
client/: CMakeLists.txt  manager_main.cpp  updater_main.cpp
client/lib/: CMakeLists.txt
client/lib/include/: ag_updater.h
client/lib/src/: ag_updater.cpp  auth.cpp  auth.h  http_client.cpp  http_client.h  version_util.cpp  version_util.h
client/manager/: CMakeLists.txt
client/manager/src/: main.cpp
client/updater/: CMakeLists.txt
client/updater/src/: main.cpp
design/: design.md  requirement.md
server/: CMakeLists.txt
server/src/: admin_api.cpp  admin_api.h  auth.cpp  auth.h  client_api.cpp  client_api.h  config.cpp  config.h  database.cpp  database.h  http_server.cpp  http_server.h  main.cpp  version_util.cpp  version_util.h
server/web/: index.html
src/: log.cpp  log.h  version.h
